# sfproc

./: Cargo.toml  Dockerfile  Makefile  README.md
src/: handler.rs  main.rs  types.rs
src/infra/: writer.rs
