[package]
name = "sfproc"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
log = "0.4"
simple_logger = "2.2.0"
exitcode = "1.1.2"
regex = "1.5.6"
aws-config = "0.15.0"
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = "0.15.0"
futures = "0.3"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
